fix navigation mobile

--- a/app/styles/_team-section.scss
+++ b/app/styles/_team-section.scss
@@ -36,13 +36,12 @@
   padding: 0.45rem 1.1rem;
   font-size: clamp(1.15rem, 1.6vw, 1.9rem);
   line-height: 1.2;
-  background:
-    linear-gradient(#000, var(--line)) left top / 11px 2px no-repeat,
-    linear-gradient(#000, var(--line)) left bottom / 11px 2px no-repeat,
-    linear-gradient(#000, var(--line)) left center / 2px 100% no-repeat,
-    linear-gradient(#000, var(--line)) right top / 11px 2px no-repeat,
-    linear-gradient(#000, var(--line)) right bottom / 11px 2px no-repeat,
-    linear-gradient(#000, var(--line)) right center / 2px 100% no-repeat;
+  background: linear-gradient(#000, var(--line)) left top / 11px 2px no-repeat,
+  linear-gradient(#000, var(--line)) left bottom / 11px 2px no-repeat,
+  linear-gradient(#000, var(--line)) left center / 2px 100% no-repeat,
+  linear-gradient(#000, var(--line)) right top / 11px 2px no-repeat,
+  linear-gradient(#000, var(--line)) right bottom / 11px 2px no-repeat,
+  linear-gradient(#000, var(--line)) right center / 2px 100% no-repeat;
 }
 
 .team-section__bracket--compact {
@@ -52,11 +51,15 @@
 .team-section__image-wrap {
   overflow: hidden;
   margin-top: 0.3rem;
-
+  height: 380px;
+  position: relative;
+  width: 100%;
+  //height: 300, // static height
   img {
-    display: block;
-    width: 100%;
-    height: auto;
+    height: 300px;
+    //display: block;
+    //width: 100%;
+    //height: auto;
   }
 }
 
